# parallel-processing

./: .gitignore  CMakeLists.txt  README.md  a_numbers_large.c  a_numbers_old.c  a_numbers_seq.c  b_numbers.c  c_perfect.c  test.c
documentation/: diagrams.ods
part-1_openmp/: CMakeLists.txt  README.md  a_numbers.c  b_numbers_seq.c
part-1_openmp/documentation/: diagrams.ods
part-2_apgas-cuda/: README.md
part-2_apgas_cuda/: README.md
part-2_apgas_cuda/1_apgas_buddy-lcm/: README.md
part-2_apgas_cuda/1_apgas_buddy-lcm/documentation/: diagrams.ods
part-2_apgas_cuda/1_apgas_buddy-lcm/scripts/: compile.sh  job-commit.sh  start.sh
part-2_apgas_cuda/1_apgas_buddy-lcm/src/groupP/: BuddyLcm.java  BuddyLcmSeq.java  BuddyLcmTest.java
part-2_apgas_cuda/2_cuda_buddy-lcm-sum/: README.md  buddyLcmSum.cu  buddyLcmSum.cuh  common.cuh  macros.h
